--- a/frontend/debate-ai/package.json
+++ b/frontend/debate-ai/package.json
@@ -12,11 +12,15 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@tanstack/react-query": "^5.62.10",
+    "@web3-react/core": "^8.2.3",
+    "@web3-react/injected-connector": "^6.0.7",
     "ai": "^4.0.22",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "ethers": "^6.13.4",
+    "ethers": "5.7.2",
     "lucide-react": "^0.469.0",
     "next": "14.2.16",
     "openai-edge": "^1.2.2",
@@ -24,8 +28,7 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "^2.21.57",
-    "wagmi": "^2.14.6"
+    "wagmi": "0.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
