--- a/contracts/package.json
+++ b/contracts/package.json
@@ -7,9 +7,9 @@
     "url": "https://github.com/vacp2p"
   },
   "devDependencies": {
+    "commit-and-tag-version": "^12.2.0",
     "prettier": "^3.0.0",
-    "solhint-community": "^3.6.0",
-    "commit-and-tag-version": "^12.2.0"
+    "solhint-community": "^3.6.0"
   },
   "keywords": [
     "blockchain",
