--- a/frontend/debate-ai/package.json
+++ b/frontend/debate-ai/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
-    "@tanstack/react-query": "^5.62.10",
+    "@reown/appkit": "^1.6.2",
+    "@reown/appkit-adapter-wagmi": "^1.6.2",
+    "@tanstack/react-query": "^5.62.11",
     "@web3-react/core": "^8.2.3",
     "@web3-react/injected-connector": "^6.0.7",
     "ai": "^4.0.22",
@@ -28,7 +31,8 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "wagmi": "2.14.6"
+    "viem": "^2.21.58",
+    "wagmi": "^2.14.6"
   },
   "devDependencies": {
     "@types/node": "^20",
