--- a/contracts/evm/foundry.toml
+++ b/contracts/evm/foundry.toml
@@ -16,7 +16,13 @@
   solc = "0.8.25"
   src = "src"
   test = "test"
-
+  fs_permissions = [
+  { access = "read", path = "./" },
+  { access = "read", path = "./broadcast" },
+  { access = "read", path = "./reports" },
+  { access = "read-write", path = "./out" },
+  { access = "read-write", path = "deployments.json" },
+]
 [profile.ci]
   fuzz = { runs = 10_000 }
   verbosity = 4
