--- a/frontend/debate-ai/package.json
+++ b/frontend/debate-ai/package.json
@@ -22,6 +22,7 @@
     "@web3-react/core": "^8.2.3",
     "@web3-react/injected-connector": "^6.0.7",
     "ai": "^4.0.22",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "5.7.2",
@@ -29,6 +30,7 @@
     "next": "14.2.16",
     "openai-edge": "^1.2.2",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -39,14 +41,14 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "css-loader": "^6.10.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
+    "mini-css-extract-plugin": "^2.8.1",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "style-loader": "^3.3.4",
-    "css-loader": "^6.10.0",
     "postcss-loader": "^8.1.1",
-    "mini-css-extract-plugin": "^2.8.1"
+    "style-loader": "^3.3.4",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
