--- a/frontend/debate-ai/package.json
+++ b/frontend/debate-ai/package.json
@@ -35,7 +35,8 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.58",
-    "wagmi": "^2.14.6"
+    "wagmi": "^2.14.6",
+    "@wagmi/core": "^2.14.6"
   },
   "devDependencies": {
     "@types/node": "^20",
