--- a/debate-agent/package.json
+++ b/debate-agent/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@ai16z/agent",
+    "name": "nuff-debate-agent",
     "version": "0.1.1",
     "main": "src/index.ts",
     "type": "module",
@@ -39,6 +39,7 @@
     "devDependencies": {
       "ts-node": "10.9.2",
       "tsup": "^8.3.5",
-      "typescript": "^5.6.3"
+      "typescript": "^5.6.3",
+			"@types/node": "^22.10.5"
     }
   }
