--- a/debate-coordinator/package.json
+++ b/debate-coordinator/package.json
@@ -14,17 +14,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.20",
-    "@types/node": "^22.10.5",
     "@types/jest": "^29.5.6",
+    "@types/node": "^22.10.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "redis": "^4.6.10",
-    "dotenv": "^16.3.1",
+    "twitter-api-v2": "^1.19.0",
     "viem": "^2.1.0"
   }
 }
