--- a/debate-coordinator/package.json
+++ b/debate-coordinator/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "agent-twitter-client": "^0.0.18",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "redis": "^4.6.10",
