--- a/debate-agent/package.json
+++ b/debate-agent/package.json
@@ -10,19 +10,19 @@
       "stop:service:all": "pm2 stop all"
     },
     "dependencies": {
-      "@ai16z/adapter-postgres": "v0.1.4-alpha.3",
-      "@ai16z/adapter-sqlite": "v0.1.4-alpha.3",
-      "@ai16z/client-auto": "v0.1.4-alpha.3",
-      "@ai16z/client-direct": "v0.1.4-alpha.3",
-      "@ai16z/client-discord": "v0.1.4-alpha.3",
-      "@ai16z/client-telegram": "v0.1.4-alpha.3",
-      "@ai16z/client-twitter": "v0.1.4-alpha.3",
-      "@ai16z/eliza": "v0.1.4-alpha.3",
-      "@ai16z/plugin-bootstrap": "v0.1.4-alpha.3",
-      "@ai16z/plugin-image-generation": "v0.1.4-alpha.3",
-      "@ai16z/plugin-node": "v0.1.4-alpha.3",
-      "@ai16z/plugin-solana": "v0.1.4-alpha.3",
-      "@ai16z/plugin-starknet": "v0.1.4-alpha.3",
+      "@ai16z/adapter-postgres": "v0.1.6",
+      "@ai16z/adapter-sqlite": "v0.1.6",
+      "@ai16z/client-auto": "v0.1.6",
+      "@ai16z/client-direct": "v0.1.6",
+      "@ai16z/client-discord": "v0.1.6",
+      "@ai16z/client-telegram": "v0.1.6",
+      "@ai16z/client-twitter": "v0.1.6",
+      "@ai16z/eliza": "v0.1.6",
+      "@ai16z/plugin-bootstrap": "v0.1.6",
+      "@ai16z/plugin-image-generation": "v0.1.6",
+      "@ai16z/plugin-node": "v0.1.6",
+      "@ai16z/plugin-solana": "v0.1.6",
+      "@ai16z/plugin-starknet": "v0.1.6",
       "better-sqlite3": "^11.5.0",
       "readline": "^1.3.0",
       "ws": "^8.18.0",
