--- a/debate-agent/.env.example
+++ b/debate-agent/.env.example
@@ -1,3 +1,33 @@
+# Required environment variables
+DISCORD_APPLICATION_ID=
+DISCORD_API_TOKEN= # Bot token
+OPENAI_API_KEY=sk-* # OpenAI API key, starting with sk-
+REDPILL_API_KEY= # REDPILL API Key
+GROK_API_KEY= # GROK API Key
+GROQ_API_KEY=gsk_*
+OPENROUTER_API_KEY=
+GOOGLE_GENERATIVE_AI_API_KEY= # Gemini API key
+
+ELEVENLABS_XI_API_KEY= # API key from elevenlabs
+
+# ELEVENLABS SETTINGS
+ELEVENLABS_MODEL_ID=eleven_multilingual_v2
+ELEVENLABS_VOICE_ID=21m00Tcm4TlvDq8ikWAM
+ELEVENLABS_VOICE_STABILITY=0.5
+ELEVENLABS_VOICE_SIMILARITY_BOOST=0.9
+ELEVENLABS_VOICE_STYLE=0.66
+ELEVENLABS_VOICE_USE_SPEAKER_BOOST=false
+ELEVENLABS_OPTIMIZE_STREAMING_LATENCY=4
+ELEVENLABS_OUTPUT_FORMAT=pcm_16000
+
+TWITTER_DRY_RUN=false
+TWITTER_USERNAME= # Account username
+TWITTER_PASSWORD= # Account password
+TWITTER_EMAIL= # Account email
+TWITTER_COOKIES= # Account cookies
+
+X_SERVER_URL=
+XAI_API_KEY=
 XAI_MODEL=
 
 #POST INTERVAL RANDOM MIN-MAX MINUTES
@@ -15,8 +45,8 @@ USE_OPENAI_EMBEDDING=  #TRUE
 #leave blank to use defaults hermes 70b for small tasks & 405b for medium/large tasks
 OPENROUTER_MODEL=
 SMALL_OPENROUTER_MODEL=
-MEDIUM_OLLAMA_MODEL=
-LARGE_OLLAMA_MODEL=
+MEDIUM_OPENROUTER_MODEL=
+LARGE_OPENROUTER_MODEL=
 
 
 #Set to Use for New OLLAMA provider
