--- a/debate-coordinator/package.json
+++ b/debate-coordinator/package.json
@@ -22,9 +22,11 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/ioredis": "^5.0.0",
     "agent-twitter-client": "^0.0.18",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "ioredis": "^5.4.2",
     "redis": "^4.6.10",
     "twitter-api-v2": "^1.19.0",
     "viem": "^2.1.0"
