--- a/debate-coordinator/package.json
+++ b/debate-coordinator/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.20",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.6",
     "@types/node": "^22.10.5",
     "jest": "^29.7.0",
@@ -22,13 +22,18 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/ioredis": "^5.0.0",
+    "@types/ws": "^8.5.13",
     "agent-twitter-client": "^0.0.18",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "ioredis": "^5.4.2",
     "redis": "^4.6.10",
     "twitter-api-v2": "^1.19.0",
-    "viem": "^2.1.0"
+    "uuid": "^11.0.4",
+    "viem": "^2.1.0",
+    "ws": "^8.18.0"
   }
 }
