chore: update .env.example

--- a/debate-coordinator/.env.example
+++ b/debate-coordinator/.env.example
@@ -5,6 +5,7 @@ AGENT_API_URL=http://localhost:3001
 # RPC URLs
 RPC_URL=https://ethereum-holesky-rpc.publicnode.com
 WSS_RPC_URL=wss://holesky.drpc.org
+AGENT_SERVERS={"socrates":"http://localhost:3001","plato":"http://localhost:3002","aristotle":"http://localhost:3003","marcus_aurelius":"http://localhost:3004", "ebeabd78-5beb-01b2-a37b-38a7b31a8858":"http://localhost:3002"}
 
 # Twitter API Credentials
 TWITTER_API_KEY=
