chore: fix code after upgrade
still missing the openai connection?

--- a/debate-agent/package.json
+++ b/debate-agent/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "tsup src/index.ts --format esm --dts",
+		"generate": "npx tsx src/utils/generateGladiators.ts",
     "start": "tsc && node --loader ts-node/esm src/index.ts",
     "start:service:all": "pm2 start pnpm --name=\"all\" --restart-delay=3000 --max-restarts=10 -- run start:all",
     "stop:service:all": "pm2 stop all"
