--- a/frontend/debate-ai/package.json
+++ b/frontend/debate-ai/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
@@ -19,6 +20,7 @@
     "@reown/appkit": "^1.6.2",
     "@reown/appkit-adapter-wagmi": "^1.6.2",
     "@tanstack/react-query": "^5.62.11",
+    "@wagmi/core": "^2.14.6",
     "@web3-react/core": "^8.2.3",
     "@web3-react/injected-connector": "^6.0.7",
     "ai": "^4.0.22",
@@ -35,8 +37,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.58",
-    "wagmi": "^2.14.6",
-    "@wagmi/core": "^2.14.6"
+    "wagmi": "^2.14.6"
   },
   "devDependencies": {
     "@types/node": "^20",
