chore: fix build

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "install:all": "pnpm install",
     "dev:frontend": "cd frontend/debate-ai && pnpm dev",
-    "dev:coordinator": "cd debate-coordinator && pnpm dev"
+    "dev:coordinator": "cd debate-coordinator && pnpm dev",
+    "dev:start": "pnpm dev:frontend & pnpm dev:coordinator",
+    "clean": "rm -rf node_modules && rm -rf package-lock.json && rm -rf pnpm-lock.yaml"
   },
   "keywords": [],
   "author": "",
