--- a/debate-agent/package.json
+++ b/debate-agent/package.json
@@ -7,7 +7,9 @@
     "build": "tsup src/index.ts --format esm --dts",
     "start": "tsc && node --loader ts-node/esm src/index.ts",
     "start:service:all": "pm2 start pnpm --name=\"all\" --restart-delay=3000 --max-restarts=10 -- run start:all",
-    "stop:service:all": "pm2 stop all"
+    "stop:service:all": "pm2 stop all",
+    "generate": "node src/utils/scrapper/twitter/index.js",
+    "debug_generate": "DEBUG='puppeteer-cluster:*' node src/utils/scrapper/twitter/index.js"
   },
   "dependencies": {
     "@elizaos/adapter-postgres": "0.1.7",
@@ -24,12 +26,27 @@
     "@elizaos/plugin-solana": "0.1.7",
     "@elizaos/plugin-starknet": "0.1.7",
     "@tavily/core": "0.0.2",
+    "agent-twitter-client": "^0.0.18",
     "amqplib": "0.10.5",
     "better-sqlite3": "11.5.0",
+    "chalk": "^5.4.1",
+    "cheerio": "^1.0.0",
+    "cli-table3": "^0.6.5",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "fs": "0.0.1-security",
+    "inquirer": "^12.3.1",
     "net": "1.0.2",
+    "openai": "^4.78.1",
+    "ora": "^8.1.1",
     "path": "0.12.7",
+    "progress": "^2.0.3",
+    "puppeteer-cluster": "^0.21.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-adblocker": "^2.13.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "readline": "1.3.0",
+    "ua-parser-js": "^2.0.0",
     "url": "0.11.4",
     "ws": "8.18.0",
     "yargs": "17.7.2"
