--- a/debate-agent/package.json
+++ b/debate-agent/package.json
@@ -9,6 +9,7 @@
     "start:service:all": "pm2 start pnpm --name=\"all\" --restart-delay=3000 --max-restarts=10 -- run start:all",
     "stop:service:all": "pm2 stop all",
     "generate": "node src/utils/scrapper/twitter/index.js",
+    "generate:judge": "ts-node src/utils/judgeGenerator.ts",
     "debug_generate": "DEBUG='puppeteer-cluster:*' node src/utils/scrapper/twitter/index.js"
   },
   "dependencies": {
@@ -48,6 +49,7 @@
     "readline": "1.3.0",
     "ua-parser-js": "^2.0.0",
     "url": "0.11.4",
+    "uuid": "^11.0.4",
     "ws": "8.18.0",
     "yargs": "17.7.2"
   },
