--- a/frontend/debate-ai/package.json
+++ b/frontend/debate-ai/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/fusion-pixel-12px-proportional-tc": "^5.0.1",
+    "@fontsource/press-start-2p": "^5.1.1",
+    "@next/font": "^14.2.15",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
@@ -17,6 +20,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@rainbow-me/rainbowkit": "^2.2.1",
     "@reown/appkit": "^1.6.2",
     "@reown/appkit-adapter-wagmi": "^1.6.2",
     "@tanstack/react-query": "^5.62.11",
@@ -36,7 +40,7 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "^2.21.58",
+    "viem": "^2.21.59",
     "wagmi": "^2.14.6"
   },
   "devDependencies": {
