--- a/frontend/debate-ai/.env.example
+++ b/frontend/debate-ai/.env.example
@@ -6,3 +6,4 @@ NEXT_PUBLIC_GLADIATOR_NFT_ADDRESS=0x746e47a31B8d6A59a26B4566e8a4E075665b92da
 
 NEXT_PUBLIC_WS_URL=ws://localhost:3003
 NEXT_PUBLIC_COORDINATOR_URL=http://localhost:3003
+RAINBOWKIT_PROJECT_ID=
