--- a/debate-coordinator/package.json
+++ b/debate-coordinator/package.json
@@ -30,6 +30,20 @@
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
     "ioredis": "^5.4.2",
+    "puppeteer": "^21.5.0",
+    "puppeteer-cluster": "^0.24.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-adblocker": "^2.13.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "inquirer": "^12.3.1",
+    "cli-table3": "^0.6.5",
+    "date-fns": "^4.1.0",
+    "chalk": "^5.4.1",
+    "fs": "0.0.1-security",
+    "path": "0.12.7",
+    "progress": "^2.0.3",
+    "readline": "1.3.0",
+    "ora": "^8.1.1",
     "redis": "^4.6.10",
     "twitter-api-v2": "^1.19.0",
     "uuid": "^11.0.4",
