Revamped: UI for diff pages

--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "debate-workspace",
+  "name": "aigora",
   "private": true,
-  "version": "0.1.0",
-  "type": "module",
-  "workspaces": [
-    "debate-agent"
-  ],
+  "version": "1.0.0",
+  "description": "AI-powered debate platform",
   "scripts": {
-    "build": "pnpm -r build",
-    "start": "pnpm --filter @ai16z/agent start"
+    "install:all": "pnpm install",
+    "dev:frontend": "cd frontend/debate-ai && pnpm dev",
+    "dev:coordinator": "cd debate-coordinator && pnpm dev",
+    "dev:start": "pnpm dev:frontend & pnpm dev:coordinator",
+    "clean": "rm -rf node_modules && rm -rf package-lock.json && rm -rf pnpm-lock.yaml"
   },
-  "engines": {
-    "node": ">=22",
-    "pnpm": ">=8"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 } 
