--- a/debate-coordinator/package.json
+++ b/debate-coordinator/package.json
@@ -22,14 +22,31 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@helia/strings": "^4.0.2",
+    "@helia/json": "^4.0.2",
     "@types/cors": "^2.8.17",
     "@types/ioredis": "^5.0.0",
     "@types/ws": "^8.5.13",
     "agent-twitter-client": "^0.0.18",
+    "chalk": "^5.4.1",
+    "cli-table3": "^0.6.5",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
+    "fs": "0.0.1-security",
+    "helia": "^5.2.0",
+    "inquirer": "^12.3.1",
     "ioredis": "^5.4.2",
+    "ora": "^8.1.1",
+    "path": "0.12.7",
+    "progress": "^2.0.3",
+    "puppeteer": "^21.5.0",
+    "puppeteer-cluster": "^0.24.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-adblocker": "^2.13.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "readline": "1.3.0",
     "redis": "^4.6.10",
     "twitter-api-v2": "^1.19.0",
     "uuid": "^11.0.4",
