--- a/frontend/debate-ai/package.json
+++ b/frontend/debate-ai/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "viem": "^2.21.59",
     "wagmi": "^2.14.6"
   },
