--- a/debate-coordinator/package.json
+++ b/debate-coordinator/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Debate coordinator service for AI debates",
   "main": "dist/app.js",
+  "type": "module",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "build": "tsc",
     "start": "node dist/app.js",
