--- a/debate-coordinator/.env.example
+++ b/debate-coordinator/.env.example
@@ -1,6 +1,8 @@
 PORT=3000
 REDIS_URL=redis://localhost:6379
 AGENT_API_URL=http://localhost:3001
+REDIS_HOST=localhost
+REDIS_PORT=6379
 
 # RPC URLs
 RPC_URL=https://ethereum-holesky-rpc.publicnode.com
