chore: env.example redis

--- a/debate-coordinator/.env.example
+++ b/debate-coordinator/.env.example
@@ -1,8 +1,11 @@
 PORT=3000
-REDIS_PUBLIC_URL=redis://localhost:6379
+REDIS_URL=redis://localhost:6379
 AGENT_API_URL=http://localhost:3001
+REDIS_URL=redis://localhost:6379
 REDIS_HOST=localhost
 REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_USERNAME=
 
 # RPC URLs
 RPC_URL=https://ethereum-holesky-rpc.publicnode.com
