--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "AI-powered debate platform",
   "scripts": {
-    "install:all": "pnpm install",
+    "install:all": "rm -f pnpm-lock.yaml && pnpm install",
     "dev:frontend": "cd frontend/debate-ai && pnpm dev",
     "dev:coordinator": "cd debate-coordinator && pnpm dev",
     "dev:start": "pnpm dev:frontend & pnpm dev:coordinator",
