--- a/frontend/debate-ai/package.json
+++ b/frontend/debate-ai/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "^0.469.0",
     "next": "14.2.16",
     "openai-edge": "^1.2.2",
+    "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
