--- a/frontend/debate-ai/package.json
+++ b/frontend/debate-ai/package.json
@@ -31,12 +31,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "5.7.2",
+    "framer-motion": "^12.4.1",
     "lucide-react": "^0.469.0",
     "next": "14.2.16",
     "openai-edge": "^1.2.2",
+    "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
